# t3-cli

./: .gitignore  LICENSE  metrics.txt  pyproject.toml  setup.py
.github/workflows/: publish-package-pypi.yml
t3_cli/: __init__.py  __main__.py
t3_cli/metrics/: metric.py
