[build-system]

requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t3-cli"
version = "0.0.1"
description = "Command line client and utilities for T3 Labs and evaluate models Deep Learning"
readme = "README.md"
authors = [{ name = "Andre Emidio", email = "andresjc2008@gmail.com" }]
license = "MIT"
classifiers = [
    "Development Status :: Alpha",
    "Topic :: Utilities :: CLI",
    "Framework :: Click",
    "Programming Language :: Python :: 3.7",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "click==8.1.3",
    "colorama==0.4.6",
    "commonmark==0.9.1",
    "Pygments==2.14.0",
    "rich==12.6.0",
    "shellingham==1.5.0.post1",
    "typer==0.7.0",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/realpython/reader"

[project.scripts]
t3 = "t3_cli.__main__:cli"